; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-class-ext/src/extr_class.c_mrb_mruby_class_ext_gem_init.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-class-ext/src/extr_class.c_mrb_mruby_class_ext_gem_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.RClass* }
%struct.RClass = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@mrb_mod_name = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"singleton_class?\00", align 1
@mrb_mod_singleton_class_p = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [12 x i8] c"module_exec\00", align 1
@mrb_mod_module_exec = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [11 x i8] c"class_exec\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mrb_mruby_class_ext_gem_init(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.RClass*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load %struct.RClass*, %struct.RClass** %5, align 8
  store %struct.RClass* %6, %struct.RClass** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = load %struct.RClass*, %struct.RClass** %3, align 8
  %9 = load i32, i32* @mrb_mod_name, align 4
  %10 = call i32 (...) @MRB_ARGS_NONE()
  %11 = call i32 @mrb_define_method(%struct.TYPE_4__* %7, %struct.RClass* %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = load %struct.RClass*, %struct.RClass** %3, align 8
  %14 = load i32, i32* @mrb_mod_singleton_class_p, align 4
  %15 = call i32 (...) @MRB_ARGS_NONE()
  %16 = call i32 @mrb_define_method(%struct.TYPE_4__* %12, %struct.RClass* %13, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %14, i32 %15)
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %18 = load %struct.RClass*, %struct.RClass** %3, align 8
  %19 = load i32, i32* @mrb_mod_module_exec, align 4
  %20 = call i32 (...) @MRB_ARGS_ANY()
  %21 = call i32 (...) @MRB_ARGS_BLOCK()
  %22 = or i32 %20, %21
  %23 = call i32 @mrb_define_method(%struct.TYPE_4__* %17, %struct.RClass* %18, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %19, i32 %22)
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %25 = load %struct.RClass*, %struct.RClass** %3, align 8
  %26 = load i32, i32* @mrb_mod_module_exec, align 4
  %27 = call i32 (...) @MRB_ARGS_ANY()
  %28 = call i32 (...) @MRB_ARGS_BLOCK()
  %29 = or i32 %27, %28
  %30 = call i32 @mrb_define_method(%struct.TYPE_4__* %24, %struct.RClass* %25, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i32 %26, i32 %29)
  ret void
}

declare dso_local i32 @mrb_define_method(%struct.TYPE_4__*, %struct.RClass*, i8*, i32, i32) #1

declare dso_local i32 @MRB_ARGS_NONE(...) #1

declare dso_local i32 @MRB_ARGS_ANY(...) #1

declare dso_local i32 @MRB_ARGS_BLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
